crates/swc_ecma_parser/tests/test262-error-references/fail/b88ab70205263170.module.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/b88ab70205263170.module.js:1:2
  |
1 | {export {a};}
  |  ^^^^^^

